# OpenDAX

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.rst  TODO  aclocal.m4  bootstrap.sh  common.h  config.h.in  configure  configure.ac  configure.in  opendax.h  opendcs.h  testconfig.py  testrunner.py
dax/: Makefile.am  TODO  buffer.c  crc.c  daxtypes.h  events.c  func.c  func.h  libcommon.h  main.c  message.c  message.h  module.c  module.h  mstr_config.c  mstr_config.h  opendax.c  options.c  options.h  process.h  tagbase.c  tagbase.h
modules/: Makefile.am  Makefile.in
modules/arduino/: arduino.c  arduino.h
modules/arduino/lib/: arduinoio.c  arduinoio.h
modules/arduino/sketch/: ArduinoIO.pde
modules/daxc/: Makefile.am  TODO  daxc.c  daxc.h  daxc_db.c  daxc_event.c  daxc_tag.c  func.c  func.h
modules/daxlua/: Makefile.am  TODO  daxlua.c  daxlua.h  demo1.lua  demo2.lua  init.lua  luaif.c  luaif.h  luaopt.c  options.c  options.h
modules/histlog/: Makefile.am  histlog.c
modules/modbus/: Makefile.am  TODO  database.c  database.h  mbcmds.c  mblib.h  mbports.c  modbus.c  modbus.h  modcmds.c  modlib.h  modmain.c  modopt.c  modopt.h  modports.c  modutil.c  options.c  options.h
modules/modbus/lib/: Makefile.am  mbcmds.c  mblib.h  mbports.c  mbserver.c  mbutil.c  modbus.c  modbus.h
modules/skel/: skel.c
modules/test/: Makefile.am  Makefile.in  TODO  daxtest.c  daxtest.h  daxtest.lua  func.c  func.h  main.c  tags.c  tags.h  testlua.c
modules/test/tests/: eventadd.lua  eventchange.lua  eventdeadband.lua  eventequal.lua  eventgreater.lua  eventless.lua  events.lua  eventset.lua  eventwrite.lua  handles.lua  lazy.lua  readwrite.lua  status.lua  tagmodify.lua
modules/wio/: wio.c
src/lib/lua/: CMakeLists.txt  libdaxlua.c  libdaxlua.h
src/master/: CMakeLists.txt  Makefile.am  cpu.c  cpu.h  daemon.c  daemon.h  logger.c  logger.h  master.c  mstr_config.c  mstr_config.h  pipes.c  pipes.h  process.c  process.h
src/modules/: CMakeLists.txt
src/modules/arduino/: Makefile.am  arduino.c  arduino.h
src/modules/daxc/: CMakeLists.txt  TODO  daxc.c  daxc.h  daxc_db.c  daxc_event.c  daxc_tag.c
src/modules/daxlua/: CMakeLists.txt  daxlua.c  daxlua.h  luaif.c  luaopt.c  scripts.c  threads.c
src/modules/examples/: CMakeLists.txt  README.rst  daxbasic.lua  daxexp.lua  daxsine.lua
src/modules/examples/joystick/: daxjoystick.c  daxjoystick.h  jsopts.c
src/modules/examples/skel/: CMakeLists.txt  skel.c  skel.h
src/modules/histlog/: CMakeLists.txt  histlog.c  histlog.h  histopts.c  histutil.c  plugin.c
src/modules/histlog/libdhl/: CMakeLists.txt  libdhl.c
src/modules/histlog/plugins/: CMakeLists.txt
src/modules/joystick/: CMakeLists.txt  daxjoystick.c  daxjoystick.h  jsopts.c
src/modules/modbus/: CMakeLists.txt  TODO  database.c  database.h  mbcmds.c  mbports.c  mbserver.c  mbslave.c  mbutil.c  modbus.c  modbus.h  modmain.c  modopt.c  modopt.h
src/modules/modbus/lib/: CMakeLists.txt  mbcmds.c  mblib.h  mbports.c  mbserver.c  mbslave.c  mbutil.c  modbus.c  modbus.h
src/modules/mqtt/: CMakeLists.txt  mqtt.c  mqtt.h  mqttopts.c
src/modules/opcua/: CMakeLists.txt  daxopcua.c
src/modules/plctag/: CMakeLists.txt  plcopt.c  plctag.c  plctag.conf  plctag.h  plcthread.c
src/modules/skel/: skel.c
src/modules/test/: CMakeLists.txt  Makefile.am  badmodule.c  badmodule.h  daxtest.c  daxtest.h  daxtest.lua  testlua.c
src/modules/wio/: CMakeLists.txt  wio.c  xbee.c
src/server/: CMakeLists.txt  Makefile.am  atomic.c  buffer.c  crc.c  daxtypes.h  events.c  func.c  func.h  groups.c  groups.h  mapping.c  message.c  message.h  module.c  module.h  options.c  options.h  retain.c  retain.h  server.c  tagbase.c  tagbase.h  virtualtag.c  virtualtag.h
tests/: CMakeLists.txt  Makefile.am  modtest_common.c  modtest_common.h  test_handles.py  test_libdax_basic.py  test_libdax_strings.py  test_mapping.py  test_modbuslib.py  test_module_daxc.py  test_module_test.py  test_single.py  test_tag_add.py  testconfig.py  testconfig.py.in  testdebug.c  testlog.c  testrunner.py
tests/LuaTests/: CMakeLists.txt  helper_event.lua  run_test.c  run_test.py  run_test_event.c  test_basic.lua  test_bit_array.lua  test_bits.lua  test_event.lua  test_tag_delete.lua  test_write_string.lua
tests/PythonTests/: test_handles.py  test_libdax_basic.py  test_libdax_strings.py  test_mapping.py  test_modbuslib.py  test_module_daxc_cdt.py  test_module_daxc_list.py  test_module_daxc_tags.py  test_module_test.py  test_single.py  test_tag_add.py  test_tag_del.py
tests/PythonTests/config/: tagserver_basic.conf
tests/PythonTests/util/: __init__.py  daxwrapper.py  mbwrapper.py
tests/internal/: CMakeLists.txt  cachetest.c  event_queue.c  fakefunction.c  groups_test.c  tagbasetest_001.c  tagbasetest_002.c  tagbasetest_003.c  tagbasetest_004.c
tests/misc/: CMakeLists.txt  misc_event_wait_race.c
tests/modules/: CMakeLists.txt  Makefile.am  badmodule.c  daxtest.h  daxtest.lua  modtest_common.c  modtest_common.h  tags.c  testlua.c
tests/modules/daxc/: CMakeLists.txt  daxc_tag.c  daxc_tag_add.c
tests/modules/luatests/: readwrite.lua
tests/modules/modbus/: CMakeLists.txt  mb_server.conf  modbus_common.c  modbus_common.h  modtest_rtu_slave_basic.c  modtest_server_exceptions_1.c  modtest_server_exceptions_2.c  modtest_server_exceptions_3.c  modtest_server_exceptions_4.c  modtest_server_exceptions_5.c  modtest_server_fc1.c  modtest_server_fc15.c  modtest_server_fc16.c  modtest_server_fc2.c  modtest_server_fc3.c  modtest_server_fc4.c  modtest_server_fc5.c  modtest_server_fc6.c  modtest_server_large_coils.c  modtest_server_large_discretes.c  modtest_server_large_holding.c  modtest_server_large_inputs.c  modtest_server_responses.c
tests/modules/mqtt/: CMakeLists.txt  fake_mqtt.c  mqtt_raw_subscribe.c  mqtt_runner.c  mqtt_test.h  raw_subscribe.c
tests/oldtests/: CMakeLists.txt  badmodule.c  daxtest.c  daxtest.h  daxtest.lua  tags.c  testlua.c
tests/oldtests/luatests/: readwrite.lua  tagname.lua
tests/util/: __init__.py  daxwrapper.py  mbwrapper.py
(+130 files in other folders)
