bin_PROGRAMS = testdebug
testdebug_SOURCES = testdebug.c
testdebug_LDADD = ../src/lib/libdax.la
#daxtest_LDADD = ../../src/func.o @LUALIB@ ../../lib/libdax.la ../../lib/lua/libdaxlua.la
#testdebug_LDADD = @LUALIB@ ../../lib/libdax.la ../../lib/lua/libdaxlua.la
# badmodule_SOURCES = badmodule.c badmodule.h
